--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -3,8 +3,11 @@ name: Build Test Benchmark
 on: [push]
 
 jobs:
-  benchmark:
-    runs-on: 'ubuntu-latest'
+  benchmark: 
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ 'ubuntu-latest', 'macos-14' ]
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK
